[package]
name = "cw-ica-controller"
version = "0.20.0"
authors = ["srdtrk <srdtrk@hotmail.com>"]
edition = "2021"
description = "This is a CosmWasm implementation of an ICS-27 interchain accounts controller."
repository = "https://github.com/srdtrk/cw-ica-controller"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# disable export feature to disable all instantiate/execute/query exports
default = ["export", "staking", "query"]
export = ["query", "staking"]
staking = ["cosmwasm-std/staking"]
query = ["dep:prost"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cw-orch                      = "0.24.1"
cosmwasm-schema = "2.1"
cosmwasm-std = { version = "2.1", features = [
    "cosmwasm_1_4",
    "stargate",
] }
cw-storage-plus = "2.0"
cw2 = "2.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0"
thiserror = "1.0"
cosmos-sdk-proto = { version = "0.23", default-features = false, features = ["cosmwasm", "std"] }
ibc-proto = { version = "0.47", default-features = false, features = ["std", "serde"] }
semver = "1.0"
cw-ownable = "2.0"
cw-ica-controller-derive = "0.4.2"
prost = { version = "0.13", optional = true }
anybuf = "0.5"
serde_with = "3.8"

# headstash dependencies
secret-cosmwasm-std = { package = "cosmwasm-std",git = "https://github.com/scrtlabs/cosmwasm/", default-features = false, tag = "v1.1.9-secret" }
snip20-reference-impl = { git = "https://github.com/scrtlabs/snip20-reference-impl", rev = "ea9fb0cd76f3e0d48e86b4d02a3990f2f4a84d00" }
secret_headstash = { git = "https://github.com/permissionlessweb/secret-airdrop", rev = "0a13bb4027c87fb88cc5fdd6d541ed1b7a930d1e" }
sha2 = { version = "0.10.6", default-features = false }

[dev-dependencies]
base64 = "0.13.1"
